tests/NormalTests/paczka1/small_fuzzy/94510719.err
Error in line 2: A413 S78 67,1
Error in line 3: bbT2 S210 11,5
